src/objects/Complement__c.object
<CustomObject>
    <fields>
        <fullName>Addressed_To__c</fullName>
        <label>Addressed To</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addressed_to_trustee_by_name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addressed to trustee by name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Correspondence</label>
        <referenceTo>Correspondance__c</referenceTo>
        <relationshipLabel>Compliments</relationshipLabel>
        <relationshipName>Compliments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Recieved__c</fullName>
        <label>Date Recieved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMT_Neil_Hunt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMT/Neil Hunt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_By__c</fullName>
        <label>Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Services__c</referenceTo>
        <relationshipName>Complements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trustees_chair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trustees/chair</label>
        <type>Checkbox</type>
    </fields>
    <label>Compliment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Recieved__c</columns>
        <columns>Addressed_To__c</columns>
        <columns>Sent_By__c</columns>
        <columns>File_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Complements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>